Fix defect DEF007 - modals not centred on screen

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -169,9 +169,9 @@
 }
 
 .modal {
-  max-width: 250px;
-  position: absolute;
-  top: 50%;
+  max-width: 400px;
+  position: fixed;
+  top: 30%;
   left: 50%;
   -webkit-transform: translateX(-50%);
   transform: translateX(-50%);
